--- a/.estlintrc.json
+++ b/.estlintrc.json
@@ -1,7 +1,11 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-    "@typescript-eslint/no-unused-vars": "warn",
+    "@typescript-eslint/no-unused-vars": ["error", { 
+    "argsIgnorePattern": "^_",
+    "varsIgnorePattern": "^_",
+    "caughtErrorsIgnorePattern": "^_"
+    }],
     "@typescript-eslint/no-explicit-any": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react/no-unescaped-entities": "off",
@@ -10,4 +14,5 @@
       "ts-ignore": "allow-with-description"
     }]
   }
+  
 }
